Wed Apr  4 13:37:30 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/RTPS/RtpsInfo.cpp:
        * dds/DCPS/RTPS/Sedp.h:
        * dds/DCPS/RTPS/Sedp.cpp:
        * dds/DCPS/RTPS/Spdp.h:
        * dds/DCPS/RTPS/Spdp.cpp:
        
          Moved forwarding of dissassociate_* functions to Sedp where 
          they were a no-op, to just be a no-op in RtpsInfo where
          the DiscoveryInfo interface requires it.

Mon Apr  2 18:00:18 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/ReceiveListenerSet.inl:

          The method for re-setting rd_ptr() when there are multiple
          listeners needs to account for the fact that continuation
          blocks also have their rd_ptr()s modified during demarshaling.

Mon Apr  2 14:51:40 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/RTPS/Sedp.cpp:
        * dds/DCPS/RTPS/Sedp.h:

          Storing associated_participants_ prior to writing the
          publication/subscription data. Changed add publication/
          subscription to have an invalid sequence number, so new
          sequence number can be used in set_header_fields.

Fri Mar 30 22:14:30 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportReassembly.cpp:

          Manage the ACE_Message_Block inside the ReceivedDataSample
          consistently for all cases of reassembling fragments.

        * dds/DCPS/transport/multicast/BestEffortSession.cpp:

          Don't call data_unavailable() with an invalid range.

        * tests/DCPS/UnitTests/Fragmentation.cpp:

          Update test for TransportReassembly change above.

Thu Mar 29 20:42:00 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:

          Improved debug logging for joining the multicast group.

        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
        * dds/DCPS/transport/udp/UdpTransport.cpp:
