@@ -1,3 +1,9 @@
+Wed Apr  4 15:28:48 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>
+
+        * tools/scripts/lcov.pl:
+
+          Changes for running lcov with no .shobj directories.
+
 Wed Apr  4 13:37:30 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>
 
         * dds/DCPS/RTPS/RtpsInfo.cpp:
@@ -5,8 +11,8 @@ Wed Apr  4 13:37:30 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>
         * dds/DCPS/RTPS/Sedp.cpp:
         * dds/DCPS/RTPS/Spdp.h:
         * dds/DCPS/RTPS/Spdp.cpp:
-        
-          Moved forwarding of dissassociate_* functions to Sedp where 
+
+          Moved forwarding of dissassociate_* functions to Sedp where
           they were a no-op, to just be a no-op in RtpsInfo where
           the DiscoveryInfo interface requires it.
 
